# AI_Music_Generator_Backend

./: .env.example  .gitignore  Dockerfile  gunicorn_conf.py  poetry.toml  pyproject.toml  pytest.ini  readme.md  server.py
alembic/: env.py
alembic/versions/: 46434c4c201a_initial.py
app/: app.py  celery.py  config.py  database.py  models.py  schemas.py
app/api/: deps.py  router.py
app/api/admin/: route.py
app/api/affiliate/: route.py  service.py
app/api/auth/: route.py  service.py
app/api/category/: route.py  service.py
app/api/chat/: route.py  service.py
app/api/cms_playlist/: route.py  service.py
app/api/collection/: route.py  service.py
app/api/craft_my_song/: route.py  service.py
app/api/credit_management/: route.py  service.py
app/api/credit_packages/: route.py  service.py
app/api/email/: route.py  service.py
app/api/embed/: route.py  service.py
app/api/favorite/: route.py  service.py
app/api/iah_radio/: route.py  service.py
app/api/oracle/: route.py  (+1 more)
app/auth/: auth_handler.py  token_handler.py
app/common/: api_usage.py  doc_extractor.py  email_utils.py  exception_handlers.py  http_response_model.py  middleware.py  s3_file_upload.py  utils.py
app/email/: service.py
app/email_templates/: contactus.html
app/logger/: logger.py
app/middlewares/: auth_middleware.py
app/stripe/: stripe_service.py
app/ws/: event_emitter.py  native_ws_manager.py  ws_manager.py
docs/: subscription_migration_email_template.md  subscription_migration_plan.md
scripts/: list_stripe_subscriptions.py  migrate_to_credit_subscriptions.py  rollback_subscription_migration.py  run_monthly_allocations.py  update_next_allocation_date.py  update_subscription_billing_cycles.py
tests/: README.md  integration_test_subscription_renewal.py  test_signup_bonus.py  test_subscription_renewal_basic.py
(+112 files in other folders)
